# elk

./: .gitignore  Cargo.toml  LICENSE  README.md  gdb-elk.py
delf/src/: addr.rs  hex_dump.rs  lib.rs  parse.rs  program_header.rs  rela.rs  section_header.rs  symb.rs
elk/: Cargo.toml
elk/src/: main.rs  process.rs
samples/: bss.asm  bss2.asm  bss3.asm  hello-dl.asm  hello.asm  hello_pie.asm  ifunc-nolibc.c  msg.asm  nodata.asm  nolibc.c  puts.c
samples/chimera/: Makefile  bar.c  chimera.c
samples/echidna/: Cargo.toml  build.rs
samples/echidna/src/: main.rs  support.rs
samples/twothreads/: twothreads.c
src/: auxv.rs  main.rs  name.rs  process.rs  procfs.rs
