[package]
name = "echidna"
version = "0.1.0"
edition = "2021"

[dependencies]
compiler_builtins = { version = "0.1.26", features = ["mem", "cc"] }

[profile.release]
overflow-checks = false
debug-assertions = false
lto = true
incremental = false
panic = "abort"
debug = true

[profile.dev]
overflow-checks = false
debug-assertions = false
lto = true
incremental = false
panic = "abort"